--- a/public/css/style.css
+++ b/public/css/style.css
@@ -1,21 +1,101 @@
-h1{
-    color:#01d277;
-    margin-top: 0;
+body{
+    background-color:#0E161E;
+    font-size: 10px;
+    font-weight: bold;
+    color: #0E161E;
 }
-.uno {
-    margin: 20px 0;
+.navbar-default{
+    background-color:  #F14D59;
+    border: 1px solid  #F14D59;
+    border-radius: 0px;
 }
 
-.container-fluid{
-    background-color: black;
+#tit{
+    color: white;
 }
 
-.col-md-4 {
-    width:30%;
+inpt{
+    width: 20%;
+    border-radius: 0px;
+}
+.col-md-6, .col-md-5 {
+    padding:0px;
+    margin:0px;
+    margin: 0%;
+    width: 100%;
+    height: 100%;
     padding: 0;
-    margin: 15px;
+    /*text-align: center;*/
+   
+
 }
-.col-md-4 {
-    text-align: center;
-    min-height: 900px;
+#panelbd{
+    display: flex;
+    flex-direction: row;
+    justify-content: flex-start;
+    padding:0px;
+    margin:0px;
+    
+    
 }
+
+#thumb{
+    width: 100%;
+    height: 100%;
+    margin: -1px;
+}
+
+#overView{
+    display: flex;
+    align-self:flex-end;
+}
+
+.panel{
+    background-color: #F14D59;
+    padding:0px;
+    margin:0px;
+    color:white;
+    border-radius: 2px;
+}
+
+.list-group-item{
+    
+}
+
+.list-group-item:hover{
+    background-color: #F14D59;
+    color: white;
+}
+
+.ul{
+    color:white;    
+}
+
+#title{
+    
+    font-weight: bolder;
+}
+
+
+
+.dropdown-menu{
+    width: 500px;
+    height: 500px;
+    background-color: #0E161E;
+   /* color:white;*/
+}
+
+
+/* average rating styles--------------------*/
+.my-custom-stars .button .material-icons {
+    font-size: 30px; 
+  }
+  
+  .my-custom-stars .star-button.star-on .material-icons {
+    color: #003399; 
+    
+  }
+  
+  .my-custom-stars .star-button.star-off .material-icons {
+    color: #99ccff; 
+  }
