--- a/app/UI/templates/nav.template.html
+++ b/app/UI/templates/nav.template.html
@@ -15,9 +15,9 @@
       <!-- Collect the nav links, forms, and other content for toggling -->
       <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
         <ul class="nav navbar-nav">
-          <li class="active"><a href="#">Home <span class="sr-only">(current)</span></a></li>
-          <li><a href="#">Film</a></li>
-          <li><a href="#">Serie TV</a></li>
+          <li class=active><a ui-sref="/">Home <span class="sr-only">(current)</span></a></li>
+          <li><a ui-sref="film">Film</a></li>
+          <li><a ui-sref="series">Serie TV</a></li>
           
          
         </ul>
